@@ -156,9 +156,12 @@ QGaimChat::send()
 	char *buffer;
 	size_t len = entry->text().length();
 
-	buffer = new char[len];
-	strncpy(buffer, entry->text().latin1(), len - 1);
-	buffer[len - 1] = '\0';
+	if (len == 0)
+		return;
+
+	buffer = new char[len + 1];
+	strncpy(buffer, entry->text().latin1(), len);
+	buffer[len] = '\0';
 
 	gaim_chat_send(GAIM_CHAT(conv), buffer);
 
@@ -212,9 +215,12 @@ QGaimIm::send()
 	char *buffer;
 	size_t len = entry->text().length();
 
-	buffer = new char[len];
-	strncpy(buffer, entry->text().latin1(), len - 1);
-	buffer[len - 1] = '\0';
+	if (len == 0)
+		return;
+
+	buffer = new char[len + 1];
+	strncpy(buffer, entry->text().latin1(), len);
+	buffer[len] = '\0';
 
 	gaim_im_send(GAIM_IM(conv), buffer);
 
