@@ -1,3 +1,10 @@
+Thu Jul 31 08:29:59 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
+
+	* src/QGaimConvWindow.cpp:
+	  - Clicking Send when there's nothing in the entry field no longer
+	    crashes.
+	  - The last character of an outgoing message isn't cut off anymore.
+
 Thu Jul 31 08:07:19 PDT 2003  Christian Hammond <chipx86@gnupdate.org>
 
 	* src/QGaimBListWindow.cpp:
